--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -32,7 +32,7 @@
         <p class="card-header-title">🛒 SKU summary</p>
       </header>
       <div class="card-content p-0">
-        <div class="table-responsive">
+        <div class="table-responsive is-auto">
         <table class="table is-fullwidth is-narrow">
           <thead><tr><th>Type</th><th># of SKUs</th></tr></thead>
           <tbody>
