Apply table width fix to more pages

--- a/templates/sku_summary.html
+++ b/templates/sku_summary.html
@@ -3,7 +3,7 @@
 <div class="mdc-card page-card">
   <div class="card-content">
     <h2 class="title is-4 mb-4">SKU details: {{ sku }}</h2>
-    <div class="table-responsive">
+    <div class="table-responsive is-auto">
     <table class="table is-fullwidth is-striped is-narrow">
       <thead>
         <tr><th>Source</th><th>Quantity</th><th>Total $</th></tr>
