--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -110,7 +110,7 @@
       </div>
     </div>
       {# Show summary for selected SKU or all SKUs #}
-      <div class="table-responsive">
+      <div class="table-responsive is-auto">
       <table class="table is-fullwidth is-striped is-narrow mb-4">
       <thead>
         <tr><th>Source</th><th>Quantity</th><th>Total $</th></tr>
