--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,7 @@
         <p class="card-header-title">📊 Status</p>
       </header>
       <div class="card-content p-0">
-        <div class="table-responsive">
+        <div class="table-responsive is-auto">
         <table class="table is-fullwidth">
           <thead><tr><th>Source</th><th>Last Uploaded</th><th>First Transaction</th><th>Last Transaction</th></tr></thead>
           <tbody>
@@ -46,7 +46,7 @@
     </div>
   </div>
 </div>
-<div class="has-text-left">
+<div class="has-text-centered">
 <a href="/monthly-report" class="mdc-button mdc-button--raised">📊 View reports</a>
 </div>
 {% endblock %}
