Improve table sizing and text wrapping

--- a/static/styles.css
+++ b/static/styles.css
@@ -243,16 +243,24 @@ input.switch:checked::before {
 }
 
 /* basic table styling */
+
+/* global table styling */
 .table {
-  width: 100%;
+  width: auto;
+  max-width: 100%;
   border-collapse: collapse;
+  table-layout: auto;
+}
+.table.is-fullwidth {
+  width: auto;
 }
 
 .table th,
 .table td {
   padding: 0.5rem;
   border: 1px solid var(--ultra-highlight);
-  word-break: break-word;
+  white-space: normal;
+  word-break: normal;
 }
 .table th {
   background-color: var(--ultra-primary);
@@ -432,6 +440,9 @@ input.switch:checked::before {
 }
 .has-text-right {
   text-align: right !important;
+}
+.has-text-centered {
+  text-align: center !important;
 }
 .no-wrap {
   white-space: nowrap;
