--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,7 +8,7 @@
   <div class="card-content">
     <form method="post" enctype="multipart/form-data">
       <div id="fileFields">
-        <div class="file-group" data-index="0">
+        <div class="file-group form-grid" data-index="0">
           <div class="field mb-4">
             <label class="label">Data file</label>
             <div class="control">
