--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="mdc-card page-card">
+<div class="mdc-card page-card centered">
   <header class="card-header">
     <p class="card-header-title">Settings</p>
   </header>
