--- a/templates/report.html
+++ b/templates/report.html
@@ -7,7 +7,7 @@
   .report-break { page-break-after: always; }
 }
 </style>
-<div class="mdc-card page-card">
+<div class="mdc-card page-card centered">
   <div class="card-content report-content">
     <h2 class="title is-4">Reports</h2>
     <div class="has-text-right mb-2">
