--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,7 +1,7 @@
 
 {% extends "layout.html" %}
 {% block content %}
-<div class="mdc-card page-card">
+<div class="mdc-card page-card centered">
   <header class="card-header">
     <p class="card-header-title">Upload sales data</p>
   </header>
