--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="mdc-card page-card centered">
+<div class="mdc-card page-card centered wide">
   <div class="card-content">
     <h2 class="title is-4 mb-4">Transactions</h2>
     <form method="get" class="mb-4 filter-form">
@@ -161,7 +161,7 @@
 
 
 {% if duplicates is defined %}
-<div class="mdc-card page-card centered mt-5">
+<div class="mdc-card page-card centered wide mt-5">
   <header class="card-header">
     <p class="card-header-title">Duplicates</p>
   </header>
