Make dashboard cards narrower and remove reports button

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="mb-5">
-  <div class="mdc-card page-card">
+  <div class="mdc-card page-card centered">
       <header class="card-header">
         <p class="card-header-title">📊 Status</p>
       </header>
@@ -27,7 +27,7 @@
   </div>
 </div>
 <div class="mb-5">
-  <div class="mdc-card page-card">
+  <div class="mdc-card page-card centered">
       <header class="card-header">
         <p class="card-header-title">🛒 SKU summary</p>
       </header>
@@ -45,8 +45,5 @@
       </div>
     </div>
   </div>
-</div>
-<div class="has-text-centered mt-4">
-<a href="/monthly-report" class="mdc-button mdc-button--raised">📊 View reports</a>
 </div>
 {% endblock %}
