--- a/templates/sku_transactions.html
+++ b/templates/sku_transactions.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="mdc-card page-card centered">
+  <header class="card-header">
+    <p class="card-header-title">{{ sku }} transactions - {{ source_title }}</p>
+  </header>
   <div class="card-content">
-    <h2 class="title is-4 mb-4">{{ sku }} transactions - {{ source_title }}</h2>
     <form method="get" class="mb-4">
       <div class="is-flex is-align-items-center mb-1">
         <label class="mr-1">Year:</label>
