--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="mdc-card page-card centered wide">
+  <header class="card-header">
+    <p class="card-header-title">Transactions</p>
+  </header>
   <div class="card-content">
-    <h2 class="title is-4 mb-4">Transactions</h2>
     <form method="get" class="mb-4 filter-form">
       <div class="field mr-2">
         <label class="label">SKU</label>
