--- a/templates/sku_map.html
+++ b/templates/sku_map.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="mdc-card page-card centered">
+  <header class="card-header">
+    <p class="card-header-title">SKU alias mapping</p>
+  </header>
   <div class="card-content">
-    <h2 class="title is-4 mb-4">SKU alias mapping</h2>
     <div class="field mb-4">
       <input type="text" id="searchBox" class="input" placeholder="Search SKUs and aliases">
     </div>
