--- a/templates/report.html
+++ b/templates/report.html
@@ -119,6 +119,7 @@
     <div id="by-year" class="tab-pane is-hidden">
       <h4 class="title is-5">Overall sales by month ({{ selected_year }})</h4>
       <img id="yearChart" data-src="{{ url_for('report_chart', year=selected_year) }}" class="my-3" alt="Monthly Chart">
+      <h4 class="title is-5 mt-5">Overall sales by month ({{ selected_year }})</h4>
       <div class="table-responsive">
       <table class="table is-fullwidth is-bordered mb-5">
         <thead>
